# handrolled-auth

./: .gitmodules  README.md
api/: Cargo.toml
api/src/: auth.rs  db.rs  login.rs  logout.rs  main.rs  session_info.rs  tokens.rs
api/src/endpoints/: invalidate_session.rs  login.rs  logout.rs  mod.rs  session_info.rs
web/: index.html
web/src/: App.module.css  App.tsx
