[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
http_from_scratch = { path = "vendor/http-from-scratch/lib" }
json_parser = { path = "vendor/json-parser/json_parser" }
json_parser_macros = { path = "vendor/json-parser/json_parser_macros" }

jsonwebtoken = "9.3.0"

lazy_static = "1.5.0"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

rand = "0.8.5"
argon2 = "0.5.3"
password-hash = { version = "0.5.0" }
